--- a/conFusion/menu.html
+++ b/conFusion/menu.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app>
+<html lang="en" ng-app="confusionApp">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,52 +22,16 @@
     <![endif]-->
 
     <script type="text/javascript" src="bower_components/angular/angular.js"></script>
+    <script type="text/javascript" src="scripts/app.js"></script>
 </head>
 
 <body>
     <div class="container">
         <div class="row row-content"
-            ng-init="dishes = [
-                {
-                   name:'Uthapizza',
-                   image: 'images/uthapizza.png',
-                   category: 'mains',
-                   label:'Hot',
-                   price:'4.99',
-                   description:'A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.',
-                   comment: ''
-                },
-                {
-                   name:'Zucchipakoda',
-                   image: 'images/zucchipakoda.png',
-                   category: 'appetizer',
-                   label:'',
-                   price:'1.99',
-                   description:'Deep fried Zucchini coated with mildly spiced Chickpea flour batter accompanied with a sweet-tangy tamarind sauce',
-                   comment: ''
-                },
-                {
-                   name:'Vadonut',
-                   image: 'images/vadonut.png',
-                   category: 'appetizer',
-                   label:'New',
-                   price:'1.99',
-                   description:'A quintessential ConFusion experience, is it a vada or is it a donut?',
-                   comment: ''
-                },
-                {
-                   name:'ElaiCheese Cake',
-                   image: 'images/elaicheesecake.png',
-                   category: 'dessert',
-                   label:'',
-                   price:'2.99',
-                   description:'A delectable, semi-sweet New York Style Cheese Cake, with Graham cracker crust and spiced with Indian cardamoms',
-                   comment: ''
-                }
-            ]">
+            ng-controller="menuController as mnController">
             <div class="col-xs-12">
                 <ul class="media-list">
-                    <li class="media" ng-repeat="dish in dishes">
+                    <li class="media" ng-repeat="dish in mnController.dishes">
                         <div class="media-left media-middle">
                             <a href="#"><img class="media-object img-thumbnail" src="{{dish.image}}" alt="{{dish.alt}}"/></a>
                         </div>
