displaying error messages

--- a/oreilly/basic-form.html
+++ b/oreilly/basic-form.html
@@ -14,25 +14,35 @@
     <body ng-controller="BasicFormCtrl as ctrl">
         <form ng-submit="ctrl.submit()" name="validationForm">
             <input type="email"
+                name="email"
                 ng-model="ctrl.user.email"
                 placeholder="Email" />
+            <span ng-show="validationForm.email.$error.email">Invalid email</span>
             <input type="text"
+                name="username"
                 ng-model="ctrl.user.username"
                 required
                 ng-minlength="4"
                 placeholder="User" />
+            <span ng-show="validationForm.username.$error.required">This is a required field</span>
+            <span ng-show="validationForm.username.$error.minlength">Minimum length required is 4</span>
             <input type="password"
+                name="password"
                 ng-model="ctrl.user.password"
                 required
                 placeholder="Password" />
+            <span ng-show="validationForm.password.$error.required">This is a required field</span>
             <input type="submit"
                 value="Submit"
                 ng-disabled="validationForm.$invalid" />
 
             <input type="text"
+                name="maxLength"
                 ng-model="ctrl.user.maxLength"
                 ng-maxLength="6"
                 placeholder="max length" />
+            <span ng-show="validationForm.maxLength.$error.maxlength">Maximum length required is 6</span>
+
             <br /><text ng-class="ctrl.formHasError(validationForm.$pristine)">Changed</text>
             <br /><text ng-class="ctrl.formHasError(validationForm.$invalid)">Valid</text>
         </form>
