--- a/oreilly/nested-forms.html
+++ b/oreilly/nested-forms.html
@@ -12,49 +12,81 @@
         <script type="text/javascript" src="js/basic.js"></script>
     </head>
     <body>
-        <form novalidate name="nestedForm">
-            <input type="text"
-                name="username"
-                class="username"
-                required=""
-                placeholder="Username"
-                ng-model="ctrl.user.username"
-                ng-minlength="4" />
-            <input type="text"
-                name="password"
-                class="password"
-                required=""
-                placeholder="Password"
-                ng-model="ctrl.user.password"
-                ng-maxlength="10" />
+        <div class="container">
+            <form novalidate name="nestedForm" class="form-horizontal">
+                <div class="form-group">
+                    <input type="text"
+                        name="username"
+                        class="form-control username"
+                        required=""
+                        placeholder="Username"
+                        ng-model="ctrl.user.username"
+                        ng-minlength="4" />
 
-            <ng-form name="profile">
-                <input type="text"
-                    name="firstName"
-                    required
-                    placeholder="First Name"
-                    ng-model="ctrl.user.profile.firstName" />
-                <input type="text"
-                    name="middleName"
-                    required
-                    placeholder="Middle Name"
-                    ng-model="ctrl.user.profile.middleName" />
-                <input type="text"
-                    name="lastName"
-                    required
-                    placeholder="Last Name"
-                    ng-model="ctrl.user.profile.lastName" />
-                <input type="date"
-                    name="dob"
-                    required
-                    placeholder="Date of Birth"
-                    ng-model="ctrl.user.profile.dob" />
-                <span ng-show="nestedForm.profile.$invalid">Please fill out the profile information</span>
-            </ng-form>
+                    <input type="text"
+                        name="password"
+                        class="form-control password"
+                        required=""
+                        placeholder="Password"
+                        ng-model="ctrl.user.password"
+                        ng-maxlength="10" />
+                </div>
 
-            <input type="submit"
-                value="Submit"
-                ng-disabled="nestedForm.$invalid" />
-        </form>
+                <ng-form name="profile">
+                    <div class="form-group">
+                        <input type="text"
+                            name="firstName"
+                            class="form-control"
+                            required
+                            placeholder="First Name"
+                            ng-model="ctrl.user.profile.firstName" />
+
+                        <input type="text"
+                            name="middleName"
+                            class="form-control"
+                            required
+                            placeholder="Middle Name"
+                            ng-model="ctrl.user.profile.middleName" />
+                    </div>
+                    <div class="form-group">
+                        <input type="text"
+                            name="lastName"
+                            class="form-control"
+                            required
+                            placeholder="Last Name"
+                            ng-model="ctrl.user.profile.lastName" />
+                        <input type="date"
+                            name="dob"
+                            class="form-control"
+                            required
+                            placeholder="Date of Birth"
+                            ng-model="ctrl.user.profile.dob" />
+                        <span ng-show="nestedForm.profile.$invalid">Please fill out the profile information</span>
+                    </div>
+
+                    <div class="form-group">
+                        <textarea name="about"
+                            class="form-control"
+                            placeholder="Tell about you"
+                            ng-model="ctrl.user.profile.about"
+                            ></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label class="check-inline">
+                            <input type="checkbox"
+                                name="likeSports"
+                                ng-model="ctrl.user.profile.likeSports"
+                                ng-true-value="'Yes'"
+                                ng-false-value="'No'" /> Do you like sports?
+                        </label>
+                    </div>
+                </ng-form>
+
+                <input type="submit"
+                    class="btn btn-info"
+                    value="Submit"
+                    ng-disabled="nestedForm.$invalid" />
+            </form>
+        </div>
     </body>
 </html>
